--- a/index.html
+++ b/index.html
@@ -113,25 +113,28 @@
                 <!--<div class="count"></div>-->
               </div>
               <div class="cell-lg-4 offset-xl-top-60">
-                <h2 class="heading heading-custom">Research</h2>
+                <h2 class="heading heading-custom">Interests</h2>
               </div>
               <div class="cell-lg-6"></div>
             </div>
             <div class="range range-sm-center range-lg-left">
-              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><img src="images/microlensing.jpg" width="200" height="200" alt="" class="img-responsive">
-                <h5>Gravitational Lensing<br class="hidden visible-lg">
-                </h5>
-               <!--  <p>Chief Operating Officer</p>-->
+              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><img src="images/microlensing_250.jpg" width="200" height="200" alt="" class="img-responsive">
+                <!--<h5>Gravitational Lensing<br class="hidden visible-lg">
+                </h5>-->
+                <h4><img src="images/blob_250.jpg" width="200" height="200" alt="" class="img-responsive">
+                <h4>
               </div>
-              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><img src="images/blob.jpg" width="200" height="200" alt="" class="img-responsive">
-                <h5>Lyman-alpha Blobs<br class="hidden visible-lg">
-                </h5>
-               <!--  <p>Chief Operating Officer</p>-->
+              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><img src="images/planet9_250.jpg" alt="" class="img-responsive">
+                <!--<h5>Lyman-alpha Blobs<br class="hidden visible-lg">
+                </h5>-->
+               <h4><img src="images/green_bean_250.jpg" alt="" class="img-responsive">
+               <h4>
               </div>
-              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><img src="images/planet9.jpg" width="200" height="200" alt="" class="img-responsive">
-                <h5>Planet 9<br class="hidden visible-lg">
-                </h5>
-               <!--  <p>Chief Operating Officer</p>-->
+              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><img src="images/mold_250.jpg" width="200" height="200" alt="" class="img-responsive">
+                <!--<h5>Planet 9<br class="hidden visible-lg">
+                </h5>-->
+               <h4><img src="images/fluffy_250.jpg" width="200" height="200" alt="" class="img-responsive">
+               <h4>
               </div>
               <div class="cell-sm-8 offset-top-40 offset-sm-top-50 cell-lg-6 offset-lg-top-0 cell-xl-preffix-1 cell-xl-4 offset-xl-top--20 section-xl-bottom-0">
                 <div class="box-wrap-1">
