--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
               <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><img src="images/microlensing_250.jpg" width="200" height="200" alt="" class="img-responsive">
                 <!--<h5>Gravitational Lensing<br class="hidden visible-lg">
                 </h5>-->
-                <h4><img src="images/blob_250.jpg" width="200" height="200" alt="" class="img-responsive">
+                <h4><img src="images/planet9_250.jpg" width="200" height="200" alt="" class="img-responsive">
                 <h4>
               </div>
-              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><img src="images/planet9_250.jpg" alt="" class="img-responsive">
+              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><img src="images/blob_250.jpg" alt="" class="img-responsive">
                 <!--<h5>Lyman-alpha Blobs<br class="hidden visible-lg">
                 </h5>-->
                <h4><img src="images/green_bean_250.jpg" alt="" class="img-responsive">
