--- a/science/microlensing/index.html
+++ b/science/microlensing/index.html
@@ -121,7 +121,7 @@ permalink: microlensing/
               <div class="cell-lg-6"></div>
             </div>
             <div class="range range-sm-center range-lg-left">
-              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><img src="../images/microlensing_250.jpg" alt="" class="img-responsive">
+              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><img src="../../images/microlensing_250.jpg" alt="" class="img-responsive">
                 <!--<h5>Gravitational Lensing<br class="hidden visible-lg">
                 </h5>-->
                 <h4><img src="images/green_bean_250.jpg" alt="" class="img-responsive">
