--- a/science/microlensing/index.html
+++ b/science/microlensing/index.html
@@ -256,7 +256,7 @@
     </div>
 
     <!-- Java script-->
-    <script src="js/core.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="../../js/core.min.js"></script>
+    <script src="../../js/script.js"></script>
   </body>
 </html>
