--- a/index.html
+++ b/index.html
@@ -45,13 +45,9 @@
           <div class="range range-md-middle">
             <div class="cell-md-6"><a href="https://github.com/Professor-G" class="brand"><img src="images/surf.png" width="300" height="300" alt="" class="img-responsive"></a></div>
             <div class="cell-md-6 text-md-right">
-              <address class="address">
-                <p>New Mexico State University, 1780 E University Ave, Las Cruces, NM 88003</p>
-                <dl class="contact-info">
-                  <dt></dt>
-                  <dd><a href="mailto:#">godines@nmsu.edu</a></dd>
-                </dl>
-              </address>
+          
+              <p><font size="+3"><b><a href="science/index.html">Machine Learning Tutorials</a></b></p>
+              <p><b><a href="python/index.html">Science Page</font></a></b></p>
             </div>
           </div>
         </div>
@@ -114,7 +110,7 @@
               <div class="cell-lg-6"></div>
             </div>
             <div class="range range-sm-center range-lg-left">
-              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><a href="science/microlensing/index.html"><img src="images/microlensing_250.jpg" alt="" class="img-responsive"></a>
+              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><a href="science/index.html"><img src="images/microlensing_250.jpg" alt="" class="img-responsive"></a>
                 <!--<h5>Gravitational Lensing<br class="hidden visible-lg">
                 </h5>-->
                 <h4><a href="green_beans.html"><img src="images/green_bean_250.jpg" alt="" class="img-responsive"></a>
@@ -153,7 +149,7 @@
               <div class="col-sm-8 cell-lg-preffix-1 cell-lg-4 cell-md-8">
                 <h2 class="heading">Tutorials</h2>
                 <p class="inset-xl-right-80">
-                  I post science and code tutorials in the context of astronomy research, check out my page <b><a href="">here.</a></b> If there's anything in particular you want me to cover, please ping me! 
+                  I post science and code tutorials in the context of astronomy research, check out my page <b><a href="python/index.html">here.</a></b> If there's anything in particular you want me to cover, please ping me! 
                 </p>
               </div>
             </div>
