--- a/python/convolutional-neural-network/index.html
+++ b/python/convolutional-neural-network/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="wide wow-animation">
   <head>
     <!-- Site Title-->
-    <title>Yum</title>
+    <title>CNN</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,10 +11,10 @@
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway:400,300%7CMontserrat:400,700">
     <link rel="stylesheet" href="../../css/style.css">
-    <!--[if lt IE 10]>
+		<!--[if lt IE 10]>
     <div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <script src="js/html5shiv.min.js"></script>
-    <![endif]-->
+		<![endif]-->
   </head>
   <body>
     <!-- Page-->
@@ -47,7 +47,7 @@
         </div>
         <div class="shell shell-wide">
           <div class="range range-md-middle">
-            <div class="cell-md-6"><a href="https://github.com/Professor-G" class="brand"><img src="../../images/fluffy_pancake.jpeg" alt="" class="img-responsive"></a></div>
+            <div class="cell-md-6"><a href="https://github.com/Professor-G" class="brand"><img src="../../images/CNN_recognizes_a_bird.png" alt="" class="img-responsive"></a></div>
             <div class="cell-md-6 text-md-right">
             </div>
           </div>
@@ -55,9 +55,9 @@
         <div id="home" data-type="anchor" class="shell shell-wide">
           <div class="range">
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
-              <h1>I love food.<br class="hidden visible-lg-inline-block">
+              <h1>Convolutional Neural Networks<br class="hidden visible-lg-inline-block">
               </h1>
-              <p class="big postfix-xl-right--30">Even when you're sitting alone delicious food is still delicious.</p>
+              <p class="big postfix-xl-right--30">CNN intro.</p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <!--<div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>-->
