--- a/python/tsne/index.html
+++ b/python/tsne/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="wide wow-animation">
   <head>
     <!-- Site Title-->
-    <title>Yum</title>
+    <title>t-SNE</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,7 +47,7 @@
         </div>
         <div class="shell shell-wide">
           <div class="range range-md-middle">
-            <div class="cell-md-6"><a href="https://github.com/Professor-G" class="brand"><img src="../../images/fluffy_pancake.jpeg" alt="" class="img-responsive"></a></div>
+            <div class="cell-md-6"><a href="https://github.com/Professor-G" class="brand"><img src="../../images/tsne.png" alt="" class="img-responsive"></a></div>
             <div class="cell-md-6 text-md-right">
             </div>
           </div>
@@ -55,9 +55,9 @@
         <div id="home" data-type="anchor" class="shell shell-wide">
           <div class="range">
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
-              <h1>I love food.<br class="hidden visible-lg-inline-block">
+              <h1>t-Stochastic Neighbor Embedenning<br class="hidden visible-lg-inline-block">
               </h1>
-              <p class="big postfix-xl-right--30">Even when you're sitting alone delicious food is still delicious.</p>
+              <p class="big postfix-xl-right--30">t-SNE intro.</p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <!--<div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>-->
