--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
               </h3>
               <p class="big postfix-xl-right--30">I am fascinated by the novel machine learning techniques that are making big data astronomy possible. I have applied machine learning to detect rare transients and objects of interest, including microlensing events and Lyman-alpha blobs.</p>
-              <p><font size="+3"><b><a href="python/index">Machine Learning Tutorials</a></b></p>
-              <p><b><a href="science/index">Science Page</font></a></b></p>
+              <p><font size="+3"><b><a href="python/index.html">Machine Learning Tutorials</a></b></p>
+              <p><b><a href="science/index.html">Science Page</font></a></b></p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <!--<div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>-->
@@ -106,12 +106,12 @@
               <div class="cell-lg-6"></div>
             </div>
             <div class="range range-sm-center range-lg-left">
-              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><a href="science/microlensing/index"><img src="images/microlensing_250.jpg" alt="" class="img-responsive"></a>
+              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><a href="science/microlensing/index.html"><img src="images/microlensing_250.jpg" alt="" class="img-responsive"></a>
                 <!--<h5>Gravitational Lensing<br class="hidden visible-lg">
                 </h5>-->
                 &nbsp;
                 &nbsp;
-                <h4><a href="science/green-beans/index"><img src="images/green_bean_250.jpg" alt="" class="img-responsive"></a>
+                <h4><a href="science/green-beans/index.html"><img src="images/green_bean_250.jpg" alt="" class="img-responsive"></a>
                 <h4>
               </div>
               <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><a href="/science/blobs/index.html"><img src="images/blob_250.jpg" alt="" class="img-responsive"></a>
