--- a/science/index.html
+++ b/science/index.html
@@ -35,12 +35,12 @@
               &nbsp;
               &nbsp;
  
-              <font size="+3"><p><b><a href="microlensing/index.html">Gravitational Lensing</a></b></p>
-              <p><b><a href="blobs/index.html">Lyman-alpha Blobs</a></b></p>
-              <p><b><a href="green-beans/index.html">Green Bean Galaxies</a></b></p>
-              <p><b><a href="planet9/index.html">Planet 9</a></b></p>
-              <p><b><a href="slime-mold/index.html">Slime Mold</a></b></p>
-              <p><b><a href="lsst/index.html">LSST</a></b></p></font>
+              <font size="+3"><p><b><a href="microlensing">Gravitational Lensing</a></b></p>
+              <p><b><a href="blobs">Lyman-alpha Blobs</a></b></p>
+              <p><b><a href="green-beans">Green Bean Galaxies</a></b></p>
+              <p><b><a href="planet9">Planet 9</a></b></p>
+              <p><b><a href="slime-mold">Slime Mold</a></b></p>
+              <p><b><a href="lsst">LSST</a></b></p></font>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <!--<div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>-->
