--- a/machine-learning/index.html
+++ b/machine-learning/index.html
@@ -38,12 +38,12 @@
               <font size="+3"><p><b><a href="data-preprocessing">Data Preprocessing</a></b></p>
               <p><b><a href="principal-component-analysis">Principal Component Analysis</a></b></p>
               <p><b><a href="tsne">t-Stochastic Neighbor Embeddening</a></b></p>
-              <p><b><a href="neural-network">Artificial Neural Networks</a></b></p>
+              <p><b><a href="data-augmentation">Data Augmentation</a></b></p>
               <p><b><a href="convolutional-neural-network">Convolutional Neural Networks</a></b></p>
               <p><b><a href="random-forest">Random Forest Ensemble</a></b></p>
+              <p><b><a href="neural-network">Artificial Neural Networks</a></b></p>
               <p><b><a href="svm">Support Vector Machines</a></b></p>
-              <p><b><a href="knn">k-Nearest Neighbors</a></b></p>
-              <p><b><a href="data-augmentation">Data Augmentation</a></b></p></font>
+              <p><b><a href="knn">k-Nearest Neighbors</a></b></p></font>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <!--<div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>-->
