--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
               </h3>
               <p class="big postfix-xl-right--30">I am fascinated by the novel machine learning techniques that are making big data astronomy possible. I have applied machine learning to detect rare transients and objects of interest, including microlensing events and Lyman-alpha blobs.</p>
-              <p><font size="+3"><b><a href="machine-learning">Machine Learning Tutorials</a></b></p>
-              <p><b><a href="science">Science Page</font></a></b></p>
+              <p><font size="+3"><b><a href="machine-learning/">Machine Learning Tutorials</a></b></p>
+              <p><b><a href="science/">Science Page</font></a></b></p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <!--<div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>-->
@@ -112,10 +112,10 @@
                 <h4><a href="science/green-beans"><img src="images/green_bean_250.jpg" alt="" class="img-responsive"></a>
                 <h4>
               </div>
-              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><a href="/science/blobs"><img src="images/blob_250.jpg" alt="" class="img-responsive"></a>
+              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><a href="science/blobs"><img src="images/blob_250.jpg" alt="" class="img-responsive"></a>
                 <!--<h5>Lyman-alpha Blobs<br class="hidden visible-lg">
                 </h5>-->
-               <h4><a href="science/planet9/index.html"><img src="images/planet9_250.jpg" alt="" class="img-responsive"></a>
+               <h4><a href="science/planet9"><img src="images/planet9_250.jpg" alt="" class="img-responsive"></a>
                <h4>
               </div>
               <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><a href="science/slime-mold"><img src="images/mold_250.jpg" alt="" class="img-responsive"></a>
