--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     I will complete my PhD at New Mexico State University by 2026, this year I am working with Dr. Prescott, we have created a deep learning algorithm to detect high redshift Lyman-alpha blobs in wide-field surveys.
                   </p>
                   <p>
-                    All of my projects are under a General Pubic License, and can be found on my <a href="https://github.com/Professor-G"><b>GitHub.</b></a> I actively maintain these repositories so installation should be hassle-free, but if it's not, please let me know!
+                    All of my projects are under a General Pubic License, and can be found on my <a href="https://github.com/Professor-G"><b>GitHub.</b></a> I actively maintain these repositories so installation should be hassle-free, but if it's not, please let me know.
                   </p>
                 </div>
               </div>
@@ -145,7 +145,7 @@
               <div class="col-sm-8 cell-lg-preffix-1 cell-lg-4 cell-md-8">
                 <h2 class="heading">Tutorials</h2>
                 <p class="inset-xl-right-80">
-                  I post machine learning tutorials in the context of astronomy research, check out my page <b><a href="machine-learning/index.html">here.</a></b> If there's anything in particular you want me to cover, please ping me! 
+                  I post machine learning tutorials in the context of astronomy research, check out my page <b><a href="machine-learning/index.html">here.</a></b> 
                 </p>
               </div>
             </div>
