--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
           </div>
         </section>
 
-        <!-- Our team-->
-          <section class="page-head bg-image bg-image-1 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
+        <!-- Interests-->
+          <section class="page-head bg-image bg-image-2 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
           <div id="team" data-type="anchor" class="shell shell-wide">
             <div class="range range-lg-bottom range-xl-top">
               <div class="cell-lg-preffix-1 cell-lg-2">
