--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <h3 class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">Phd Student<br class="hidden visible-lg-inline-block">
 
               </h3>
-              <p class="big postfix-xl-right--30">I am fascinated by the novel machine learning techniques that are making big data astronomy possible. I have applied machine learning to detect rare transients and objects of interest, including microlensing events and Lyman-alpha blobs.</p>
+              <p class="big postfix-xl-right--30">Fascinated by the novel machine learning techniques that are making big data astronomy possible, I have applied machine learning to detect rare transients and objects of interest, including microlensing events and Lyman-alpha blobs.</p>
               <p><font size="+3"><b><a href="machine-learning/">Machine Learning Tutorials</a></b></p>
               <p><b><a href="science/">Science Page</font></a></b></p>
             </div>
