--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <h3 class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">Phd Student<br class="hidden visible-lg-inline-block">
 
               </h3>
-              <p class="big postfix-xl-right--30">Fascinated by the novel computational techniques that are making big data astronomy possible, I have applied machine learning to detect rare transients and objects of interest, including <span style="font-weight: bold"><a href="https://github.com/Professor-G/LIA">microlensing events</a></span> and <a href="https://github.com/Professor-G/pyBIA"><b>Lyman-alpha blobs.</b></a></p>
+              <p class="big postfix-xl-right--30">Fascinated by the novel computational techniques that are making big data astronomy possible, I have applied machine learning to detect rare transients and objects of interest, including <a href="https://github.com/Professor-G/LIA"><span style="font-weight: bold">microlensing events</span></a> and <a href="https://github.com/Professor-G/pyBIA"><b>Lyman-alpha blobs.</b></a></p>
               <p><font size="+3"><b><a href="machine-learning/">Machine Learning Tutorials</a></b></p>
               <p><b><a href="science/">Science Page</font></a></b></p>
             </div>
