--- a/machine-learning/index.html
+++ b/machine-learning/index.html
@@ -43,7 +43,7 @@
               <p><b><a href="random-forest">Random Forest Ensemble</a></b></p>
               <p><b><a href="neural-network">Artificial Neural Networks</a></b></p>
               <p><b><a href="svm">Support Vector Machines</a></b></p>
-              <p><b><a href="knn">k-Nearest Neighbors</a></b></p></font>
+              <p><b><a href="optimization">Hyperparameter Optimization</a></b></p></font>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <!--<div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>-->
